recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:13: error: expected start of definition
	override def run() {
                 ^Spiral:17: error: Unmatched closing brace '}' ignored here
}
^